SUBDIRS = pixmaps

uidir = $(datadir)/xournalpp/ui
ui_DATA = \
	about.glade \
	export.glade \
	goto.glade \
	images.glade \
	main.glade \
	page-background-color.glade \
	pagesize.glade \
	pdfpages.glade \
	settings.glade \
	texdialog.glade \
	toolbarCustomizeDialog.glade \
	toolbarManageDialog.glade \
	toolbar.ini

EXTRA_DIST = ${ui_DATA}
