#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([mathtex], [1.02], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([mathtex.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

AC_CHECK_PROG([HAVE_LATEX], [latex], [yes], [no])
if test "$HAVE_LATEX" = "yes"; then
    AC_DEFINE_UNQUOTED([LATEX], ["`which latex`"], [path to latex bin file])
else
    AC_MSG_ERROR([latex NOT found. you must install latex before installing mathtex.])
fi

AC_CHECK_PROG([HAVE_DVIPNG], [dvipng], [yes], [no])
if test "$HAVE_DVIPNG" = "yes"; then
    AC_DEFINE_UNQUOTED([DVIPNG], ["`which dvipng`"], [path to latex bin file])
else
    AC_MSG_ERROR([dvipng NOT found. you must install latex before installing mathtex.])
fi

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_STRTOD
AC_CHECK_FUNCS([alarm memmove memset mkdir strchr strcspn strncasecmp strspn strstr])

AC_OUTPUT
