
pixmapdir = $(datadir)/xournalpp/ui/pixmaps
pixmap_DATA = \
	addPage.svg \
	centerPage.svg \
	default.png \
	delPage.svg \
	documentNew.png \
	empty.png \
	fullscreen.png \
	goto.svg \
	hand.png \
	lasso.png \
	layers.png \
	nextAnnotatedPage.png \
	object-select.png \
	rect-select.png \
	pageSpinner.png \
	ruler.png \
	shape_recognizer.png \
	showtwopages.png \
	sidebar_bookmarks.svg \
	sidebar_index.png \
	sidebar-layer-preview.svg \
	sidebar-page-preview.svg \
	stretch.png \
	thickness_medium.png \
	thickness_thick.png \
	thickness_thin.png \
	tool_eraser.png \
	tool_highlighter.png \
	tool_image.png \
	tool_pencil.png \
	tool_text.png \
	xoj.svg \
	xournalpp.svg

EXTRA_DIST = ${pixmap_DATA}
	
