
pixmapdir = $(datadir)/xournalpp/ui/pixmaps

## UPDATE_FILE_LIST_START

pixmap_DATA = \
	circle-draw.svg \
	ruler.svg \
	nextAnnotatedPage.png \
	pageSpinner.png \
	rect-select.svg \
	stretch.svg \
	sidebar-page-preview.svg \
	layer.svg \
	delPage.svg \
	object-select.png \
	showtwopages.svg \
	sidebar_index.png \
	thickness_thin.svg \
	shape_recognizer.svg \
	xoj.svg \
	tool_text.svg \
	goto.svg \
	tool_eraser.png \
	centerPage.svg \
	thickness_thick.svg \
	default.png \
	xournalpp.svg \
	rect-draw.svg \
	hand.png \
	fullscreen.svg \
	tool_image.png \
	addPage.svg \
	lasso.png \
	tool_highlighter.png \
	thickness_medium.svg \
	xournalpp.png \
	empty.png \
	sidebar_bookmarks.svg \
	documentNew.svg \
	tool_pencil.png \
	arrow-draw.svg

## UPDATE_FILE_LIST_END

EXTRA_DIST = ${pixmap_DATA}
	
