
pixmapdir = $(datadir)/xournalpp/ui/pixmaps

## UPDATE_FILE_LIST_START

pixmap_DATA = \
	sidebar_index.svg \
	circle-draw.svg \
	object-select.svg \
	ruler.svg \
	pageSpinner.png \
	rect-select.svg \
	stretch.svg \
	sidebar-page-preview.svg \
	layer.svg \
	delPage.svg \
	showtwopages.svg \
	default.svg \
	thickness_thin.svg \
	shape_recognizer.svg \
	hand.svg \
	xoj.svg \
	tool_text.svg \
	goto.svg \
	centerPage.svg \
	thickness_thick.svg \
	xournalpp.svg \
	rect-draw.svg \
	nextAnnotatedPage.svg \
	tool_image.svg \
	tool_eraser.svg \
	lasso.svg \
	fullscreen.svg \
	addPage.svg \
	tool_pencil.svg \
	empty.svg \
	tool_highlighter.png \
	thickness_medium.svg \
	xournalpp.png \
	sidebar_bookmarks.svg \
	documentNew.svg \
	arrow-draw.svg

## UPDATE_FILE_LIST_END

EXTRA_DIST = ${pixmap_DATA}
	
